# mymonero-app-android

./: .gitignore  README.md
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/mymonero/mymonero/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/cpp/mymonero_app_jni_bridge/: index.cpp
app/src/main/cpp/mymonero_app_lib/: AppServiceLocator.cpp  AppServiceLocator.hpp  PasswordController.cpp  PasswordController.hpp  document_persister.cpp  document_persister.hpp
app/src/main/java/com/mymonero/Application/: AppLib_Bridge.kt  MainActivity.kt  MainApplication.kt  URLOpening.kt  UserIdle.kt
app/src/main/java/com/mymonero/Currencies/: Currencies.kt
app/src/main/java/com/mymonero/KotlinUtils/: Events.kt  ServiceLocatorsAndDeps.kt
app/src/main/java/com/mymonero/Lists/: ListController.kt
app/src/main/java/com/mymonero/MyMoneroCore/: MoneroConstants.kt  MoneroTypes_Amounts.kt
app/src/main/java/com/mymonero/Passwords/: PasswordController.kt
app/src/main/java/com/mymonero/Persistence/: DocumentPersister.kt  PersistableObject.kt
app/src/main/java/com/mymonero/Settings/: SettingsController.kt
app/src/main/java/com/mymonero/Wallets/: Wallet.kt  WalletsListController.kt
app/src/main/java/com/mymonero/mymonero/: Currencies.kt  DocumentPersister.kt  Events.kt  MainActivity.kt  MainApplication.kt  MoneroConstants.kt  MoneroTypes_Amounts.kt  PasswordController.kt  PersistableObject.kt  ServiceLocatorsAndDeps.kt  SettingsController.kt  UserIdle.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/mymonero/mymonero/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
